--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,23 @@
 1-17
 1-18
 1-19
+2-1
+2-3
+2-4
+2-5
+2-6
+2-7
+2-8
+2-8proper
+2-9
+2-10
+e1-2
+e1-2b
+e1-5
+e1-5b
+e1-5c
+e1-6
+e1-7
+e1-9
+e2-7
+wordcount
